<resources>
    <string name="app_name">SafeWomen</string>
    <string name="slogan">You Are Safe Here</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="app_logo">app logo</string>
    <string name="registration_successful">Registration Successful!</string>
    <string name="redirecting_to_login">Redirecting to login page…</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="reset_password_instructions">Enter your email address and we\'ll send you a code to reset your password.</string>
    <string name="request_reset_code">Request Reset Code</string>
    <string name="enter_reset_code">Enter the reset code sent to your email and create a new password.</string>
    <string name="reset_code">Reset Code</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_reset_success">Your password has been reset successfully!</string>
    <string name="back_to_login">Back to Login</string>
    <string name="success">success</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">user.email@example.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Menu Items -->
    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_sos">SOS</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_account">Account</string>
    <string name="menu_help_support">Help &amp; Support</string>
    <string name="alert_details">Alert Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">map</string>
    <string name="contacts">Contacts</string>
    <string name="warning">warning</string>
    <string name="alerts">Alerts</string>
    <string name="settings">settings</string>
    <string name="setting">Settings</string>
    <string name="safety_tips">safety tips</string>
    <string name="safety_tip">Safety Tips</string>
    <string name="features">Features</string>
    <string name="Maps">Map</string>
    <string name="tap_to_send_emergency_alert_to_your_contacts">Tap to send emergency alert to your contacts</string>
    <string name="menu_alerts">Alerts</string>
    <string name="mark_unsafe">Mark Unsafe</string>
    <string name="mark_safe">Mark Safe</string>
    <string name="navigate">Navigate</string>
    <string name="share">Share</string>
    <string name="close">Close</string>
    <string name="location_details">Location Details</string>
    <string name="_0_locations">0 locations</string>
    <string name="safety_zones">Safety Zones</string>
    <string name="show_history">Show History</string>
    <string name="all">All</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="today">Today</string>
    <string name="filter_history">Filter History</string>
    <string name="location_tracking">Location Tracking</string>
    <string name="warnin">Warning</string>
    <string name="my_location">My Location</string>
    <string name="safe">Safe</string>
    <string name="danger">Danger</string>
    <string name="delete_contact">Delete</string>
    <string name="primary">Primary</string>
    <string name="sync_status">Sync status</string>
    <string name="contact_image">Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="set_as_primary_contact">Set As Primary</string>
    <string name="relationship">Relation</string>
    <string name="name">Name</string>
    <string name="select_contact_to_import">Select Contact To Import</string>
    <string name="contacts_permission_denied">Contacts Permission Denied</string>
    <string name="error_name_phone_required">Name and Phone required</string>
    <string name="cancel" >cancel</string>
    <string name="save">save</string>
    <string name="add_emergency_contact">Add Emergency Contact</string>
    <string name="import_from_contacts">Import From Contacts</string>
    <string name="add_emergency_contacts_description">Add Emergency Contact Description</string>
    <string name="no_emergency_contacts">No Emergency Contact</string>
    <string name="no_contacts_found">"No Contact Found "</string>
    <string name="edit_emergency_contact">Edit Emergency Contact\n</string>
    <string name="delete_contact_confirmation">Confirm</string>
    <string name="delete">Delete</string>
    <string name="import_contacts">Import Contacts</string>
    <string name="add_as_emergency_contact">Add As Emergency Contact</string>
</resources>
