<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/nav_sos"
            android:icon="@drawable/ic_sos"
            android:title="@string/menu_sos" />
    </group>

    <item android:title="@string/menu_account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

    <item android:title="@string/menu_help_support">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>
