<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.safewomen.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.safewomen.fragments.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.example.safewomen.fragments.ContactFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_sos"
        android:name="com.example.safewomen.fragments.SOSFragment"
        android:label="@string/menu_sos"
        tools:layout="@layout/fragment_sos" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.safewomen.fragments.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.safewomen.fragments.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.safewomen.fragments.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.safewomen.fragments.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

</navigation>
