<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.RegisterActivity">

    <!-- Success Splash Screen Layout -->
    <LinearLayout
        android:id="@+id/successSplashLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/registration_successful"
            android:textColor="@color/Dapink"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/redirecting_to_login"
            android:textColor="@color/Mpink"
            android:textSize="18sp" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp" />

    </LinearLayout>

    <!-- Register Form Layout -->
    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sloganText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/slogan"
        android:textColor="@color/black"
        android:shadowColor="@color/black"
        android:textSize="24sp"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        tools:ignore="MissingPrefix" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/registerFormLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardBackgroundColor="#80FFFFFF"
        app:cardElevation="4dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/sloganText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:text="@string/register"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:id="@+id/registerTitle"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/editTextName"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/edit_text_background"
                android:autofillHints="name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/editTextEmail"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:autofillHints="emailAddress" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/editTextPhone"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:autofillHints="phone" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:autofillHints="password" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:autofillHints="password" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="180sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:background="@drawable/button_background"
                android:backgroundTint="@null"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_account"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textViewLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/login"
                    android:textColor="@color/Dapink"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
